# leetcode

./: .gitignore  CMakeLists.txt  README.md  Solution.cpp  Solution.h  main.cpp  main1.cpp
huawei/: test_approximate_value.cpp  test_binary_one_num.cpp  test_char_count.cpp  test_colabox.cpp  test_coordinate.cpp  test_diff_int.cpp  test_list_goods.cpp  test_merge_record.cpp  test_minimum_common_multiple.cpp  test_number_day.cpp  test_prime_factor.cpp  test_remove_least_char.cpp  test_reverse_num.cpp  test_reverse_sentence.cpp  test_simple_error_record.cpp  test_simple_password.cpp
tencent/array_string/: Solution.cpp  Solution.h
